# ildjit

GarbageCollectors/iljit-gc-bdw/: AUTHORS  ChangeLog  README  clean  configure.in
GarbageCollectors/iljit-gc-copy/: AUTHORS  Makefile.am  NEWS  README  bootstrap  cleanup  configure.ac
GarbageCollectors/iljit-gc-markandsweep/: ChangeLog  Makefile.am  README  configure.in
GarbageCollectors/iljit-gc-shifter/: ChangeLog  Doxyfile  HACKING  Makefile.am  README  bootstrap  configure.in
clrbase/: ChangeLog  Makefile.am  README  configure.ac
clrbase/src/: Makefile.am  clr.c  clr_system.h  internal_calls_IO.c  internal_calls_IO.h  internal_calls_array.c  internal_calls_array.h  internal_calls_char.c  internal_calls_char.h  internal_calls_charinfo.c  internal_calls_charinfo.h  internal_calls_currentsystemtimezone.c  internal_calls_currentsystemtimezone.h  internal_calls_datetime.c  internal_calls_datetime.h  internal_calls_decimal.c  internal_calls_decimal.h  internal_calls_delegate.c  internal_calls_delegate.h  internal_calls_enum.c  internal_calls_enum.h  internal_calls_environment.c  internal_calls_environment.h  internal_calls_gc.c  internal_calls_gc.h  internal_calls_math.c  internal_calls_math.h  internal_calls_misc.c  internal_calls_misc.h  internal_calls_net.c  internal_calls_net.h  internal_calls_numberformatter.c  internal_calls_numberformatter.h  internal_calls_object.c  internal_calls_object.h  internal_calls_reflection.c  internal_calls_reflection.h  internal_calls_runtime.c  internal_calls_runtime.h  internal_calls_security.c  (+11 more)
ildjit/: ChangeLog  Makefile.am  README  configure.ac
ildjit/debian/: control  info  rules
ildjit/doc/: Makefile.am  doxy.config  ildjit.1  ildjit.texi  iljit.1
ildjit/src/: Makefile.am  ildjit.c  iljit_loader.c
iljit-ecmasoft/: ChangeLog  Makefile.am  README  bootstrap  configure.ac
iljit-ecmasoft/debian/: changelog  control  copyright
iljit-ecmasoft/src/: Makefile.am  iljit_ecmasoft_decoder.c  iljit_ecmasoft_decoder.h
libchiara/src/: Makefile.am  chiara.c  chiara.h  chiara_dependencies.c  chiara_dependencies_profiler.c  chiara_dominators.c  chiara_dopipe_profiler.c  chiara_instructions.c  chiara_load_loop_names.c  chiara_load_loop_names.h  chiara_loop_transformations.c  chiara_loop_transformations.h  chiara_loops_IR_profiler.c  chiara_loops_profiler.c  chiara_loops_profiler_misc.c  chiara_loops_profiler_misc.h  chiara_memory.c  chiara_methods.c  chiara_misc.c  chiara_profile.c  chiara_profile.h  chiara_program_profiler.c  chiara_schedule.c  chiara_system.h  chiara_time.c  chiara_tools.c  chiara_tools.h  instruction.lex  load_instructions.c  load_loops.c  loop.lex  loop_names.lex  loop_scanner.h  loops_invocations.lex  status_file.lex
libclimanager/: ChangeLog  Makefile.am  README  configure.ac
libclimanager/debian/: changelog  control  copyright
libclimanager/include/: Makefile.am
libclimanager/pkgconfig/: Makefile.am  libclimanager.pc.in
libclimanager/src/: Makefile.am  cil_stack.c  cil_stack.h  cli_manager.c  cli_manager.h  climanager_system.h  ilmethod.c  ilmethod.h  layout_manager.c  layout_manager.h  lib_array.c  lib_array.h  lib_culture.c  lib_culture.h  lib_decimal.c  lib_decimal.h  lib_delegates.c  lib_delegates.h  lib_net.c  lib_net.h  lib_pinvoke.c  lib_pinvoke.h  lib_reflect.c  lib_reflect.h  lib_runtimehandle.c  lib_runtimehandle.h  lib_string.c  lib_string.h  lib_stringBuilder.c  lib_stringBuilder.h  lib_thread.c  lib_thread.h  lib_typedReference.c  lib_typedReference.h  lib_vararg.c  lib_vararg.h
libcompilermemorymanager/: ChangeLog  README  bootstrap  configure.ac
libcompilermemorymanager/debian/: changelog  control  copyright  rules
libcompilermemorymanager/doc/: doxy.config
libcompilermemorymanager/include/: Makefile.am
libcompilermemorymanager/pkgconfig/: Makefile.am  libcompilermemorymanager.pc.in
libcompilermemorymanager/src/: Makefile.am  compiler_memory_manager.c  compiler_memory_manager.h  compiler_memory_manager_system.h  libgc.tar.bz2  private_memory_pool.c  private_memory_pool.h  private_memory_wrapper.c  shared_memory_pool.c  shared_memory_pool.h  shared_memory_wrapper.c
libcore/: ChangeLog  bootstrap  configure.ac
libcore/debian/: changelog  copyright
libcore/include/: Makefile.am
libcore/pkgconfig/: Makefile.am  libcore.pc.in
libcore/src/: Makefile.am  cil_ir_translator.c  cil_ir_translator.h  clr_interface.h  clr_manager.c  clr_manager.h  code_generator.c  code_generator.h  download  exception_manager.c  exception_manager.h  executor.c  executor.h  garbage_collector_interactions.c  garbage_collector_interactions.h  general_tools.c  general_tools.h  ildjit_profiler.c  ildjit_profiler.h  ildjit_system.h  iljit.c  iljit.h  iljit_loader.c  iljit_plugin_manager.c  iljit_plugin_manager.h  initial_checker.c  initial_checker.h  lib_compilerNativeCall.gperf  lib_compilerNativeCall.h  lib_lock.h  lib_lock_os.c  lib_lock_os.h  lib_lock_thin.c  lib_lock_thin.h  loader.c  loader.h  recompiler.c  recompiler.h  runtime.c  runtime.h  (+12 more)
libdla/: ChangeLog  Makefile.am  README  configure.ac
libdla/debian/: changelog  control  copyright  libdla-dev.dirs
libdla/include/: Makefile.am
libdla/pkgconfig/: Makefile.am  libdla.pc.in
libdla/src/: Makefile.am  dla.c  dla.h
libilbinary/: ChangeLog  configure.ac
libilbinary/include/: Makefile.am
libilbinary/pkgconfig/: Makefile.am  libilbinary.pc.in
libiljitil/: ChangeLog  README  configure.ac
libiljitiroptimizer/: ChangeLog  README  configure.ac
libiljitmm/: ChangeLog  README  bootstrap  configure.ac
libiljitsm/: ChangeLog  Makefile.am  README  configure.ac
libiljitu/: ChangeLog  README  configure.ac
libirmanager/: ChangeLog  Makefile.am  README  configure.ac
libirvirtualmachine_libjit/: ChangeLog  README  bootstrap  configure.ac
libirvirtualmachine_llvm3.3/: ChangeLog  Makefile.am  configure.ac
optimizer-ddg-interprocedural/: ChangeLog  Makefile.am  configure.ac
optimizer-dowhile_to_while/: ChangeLog  NEWS  README  configure.ac
optimizer-variable_renaming/: AUTHORS  ChangeLog  INSTALL  NEWS  README  configure.ac
(+2399 files in other folders)
